tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match1.bal
import ballerina/java;

public function acceptIntReturnIntThrowsCheckedException(int a) returns int = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;
